# BlackHole

./: .gitignore  CMakeLists.txt  Readme.md  main.cpp
assets/shaders/: animated_blackhole.frag  blackhole.frag  flat.frag  flat.vert  raymarch.frag  raymarch.vert
src/: asset_loader.cpp  asset_loader.h  camera.h  engine.cpp  engine.h  renderer.cpp  renderer.h  shader.cpp  shader.h  shader_library.cpp  shader_library.h
